Hoisting. Not perfect yet. And ugly.

--- a/vt220.css
+++ b/vt220.css
@@ -5,6 +5,32 @@
 
 .highlight { background-color: yellow }
 
+ul, li {
+    display: inline;
+    margin: 0;
+    padding: 0;
+}
+ul .header {
+    font-size: 40px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+ul .header ul {
+    font-size: 20px;
+}
+
+ul .hidden {
+    display: none;
+}
+ul .hoisted {
+    display: list-item;
+    margin: 0em 0em 0em 1em;
+}
+ul .crumb {
+}
+
 body {
     color: white;
     background: black;
