--- a/vt220.css
+++ b/vt220.css
@@ -1,3 +1,13 @@
+#thetree li.folded > .node {
+    color: blue;
+}
+
+#thetree li.filter .node {
+    color: red;
+    display: none;
+}
+
+/*
 li.zoom li .highlight {
     background-color: green; color: black
 }
@@ -54,6 +64,7 @@ li.filter {
     height: 0;
     overflow: hidden;
 }
+*/
 
 /*
 li.filter li {
@@ -89,6 +100,14 @@ ul .hoisted {
 ul .crumb {
 }
 */
+
+li {
+    list-style: none;
+}
+
+li .node {
+    cursor: pointer;
+}
 
 body {
     color: white;
