Adaptions to URL rewriting ("/fu" instead of "index.html#fu")

--- a/vt220.css
+++ b/vt220.css
@@ -1,5 +1,10 @@
+#thetree .highlight {
+    border-bottom: 5px solid yellow;
+}
+
 #thetree .headline li .highlight {
     background-color: yellow;
+    border: none;
 }
 
 #thetree li {
