--- a/almightree.css
+++ b/almightree.css
@@ -7,7 +7,14 @@ body {
     color: #222;
     font-family: sans-serif;
     font-size: 16px;
-    width: 100%;
+}
+
+#almightree .headline li img {
+    width: 500px;
+}
+
+#almightree .crumb > .node img, #almightree .headline > .node img {
+    height: 1em;
 }
 
 #almightree-search {
@@ -25,13 +32,14 @@ body {
 }
 
 #almightree .headline .zoom {
-    display: inline;
     visibility: hidden;
+    display: block;
+    float: right;
+    padding: 3px;
 }
 
 #almightree .headline li .node:hover .zoom {
     visibility: visible;
-    padding: 6px;
 }
 
 #almightree li {
@@ -43,15 +51,16 @@ body {
 }
 
 #almightree .headline li .node {
-    padding: 3px 0;
-    margin: 9px 0;
-    display: block;
+    margin: 3px 0;
+    display: inline-block;
     vertical-align: middle;
 }
 
 #almightree .headline li .node .text {
     border-radius: 7px;
     padding: 3px;
+    margin-right: 25px;
+    display: block;
 }
 
 #almightree .headline li.folded > .node .text {
