Margin at the bottom

--- a/almightree.css
+++ b/almightree.css
@@ -26,6 +26,7 @@ body {
 #almightree {
     margin-left: 40px;
     margin-top: 20px;
+    margin-bottom: 200px;
 }
 
 #almightree .headline li li {
