--- a/almightree.css
+++ b/almightree.css
@@ -6,6 +6,10 @@
     vertical-align: baseline;
 }
 
+p + p {
+    margin-top: 1em;
+}
+
 html {
     overflow: -moz-scrollbars-vertical; 
     overflow-y: scroll;
