--- a/almightree.css
+++ b/almightree.css
@@ -1,26 +1,3 @@
-* {
-    padding: 0;
-    margin: 0;
-    border: 0;
-    font-size: 100%;
-    vertical-align: baseline;
-}
-
-p + p {
-    margin-top: 1em;
-}
-
-html {
-    overflow: -moz-scrollbars-vertical; 
-    overflow-y: scroll;
-}
-
-body {
-    color: #222;
-    font-family: sans-serif;
-    font-size: 16px;
-}
-
 #almightree {
     margin-left: 40px;
     margin-top: 20px;
@@ -65,6 +42,15 @@ body {
 
 #almightree li {
     margin-left: 40px;
+}
+
+@media only screen and (max-device-width: 480px) {
+    #almightree li {
+        margin-left: 20px;
+    }
+    #almightree {
+        margin-left: 20px;
+    }
 }
 
 #almightree li.crumb, #almightree li.headline, #almightree > ul > li {
